--- a/writing/modena.html
+++ b/writing/modena.html
@@ -9,17 +9,17 @@ title: It Comes From Modena
 <p></p>
 <p>* * *</p>
 <p></p>
-<p>It’s 1987 and the pasta salad my mom makes in giant batches for parties, always much better the next day, is sitting in the fridge, in a large red bowl with a cracked plastic lid, taunting me. No typical pasta salad, this is Long Island chic pasta salad with mozzarella, cherry tomatoes, fusilli, fresh basil, and dressing made with the fanciest ingredient of them all, Balsamic vinegar.</p>
+<p>It’s 1987 and the pasta salad my mom makes in giant batches for parties, always much better the next day, sits in the fridge, in a large red bowl with a cracked plastic lid, taunting me. No typical pasta salad, this is Long Island chic pasta salad with mozzarella, cherry tomatoes, fusilli, fresh basil, and dressing made with the fanciest ingredient of them all, Balsamic vinegar.</p>
 <p></p>
 <p>* * *</p>
 <p></p>
-<p>I’m trying broccolini for the first time at my high school girlfriend’s house, leftovers from a party. I ask her why I wasn’t invited. Her dad pokes his head in - “Learn to be polite and people will invite you to parties.” The broccolini is cold, crunchy, bitter, and satisfying, with Balsamic vinaigrette.</p>
+<p>I’m trying broccolini for the first time at my high school girlfriend’s house, leftovers from a party. I ask her why I wasn’t invited. Her dad pokes his head in - “Learn to be polite and people will invite you to parties.” The broccolini is cold and crunchy, bitter, and satisfying, with Balsamic vinaigrette.</p>
 <p></p>
 <p>* * *</p>
 <p></p>
 <p>I learn how it’s made in college from my best friend. His last namemeans horse in Italian, which makes him laugh, but I don’t get the joke. “In Modena they take the leftovers from making red wine, called must, and age it in barrels, sometimes for decades, until it leaves a thick, sticky sweet, sour slurry behind.”</p>
 <p></p>
-<p>The version my mom uses is a shadow in comparison, watery, artificially colored, harsh tasting, no more the real thing than the “shakey cheese” we dump on pasta is compared to the real Parmigiano.</p>
+<p>The version my mom uses is a shadow in comparison, watery, artificially colored, harsh tasting, no more authentic than the “shakey cheese” we dump on pasta is compared to the real Parmigiano.</p>
 <p></p>
 <p>* * *</p>
 <p></p>
