--- a/cw.html
+++ b/cw.html
@@ -7,11 +7,10 @@ title: Creative Writing
 <i>Creative Writing</i>
 </span>
 <br/><br/>
-<b>Weekly Essays</b><br/>
-An essay per week for 50 weeks.
+<b>Essays</b><br/>
 <form name="mailinglist" netlify netlify-honeypot="bot-field">
   <p style="font-size: 16px; line-height:24px; font-weight: bold;">
-    <i>New! Join the list and get an essay by email every week.</i>
+    <i>Join the list and get new writing in your inbox as it is published.</i>
     <span style="display:none;">
       <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
     </span>
@@ -20,18 +19,18 @@ An essay per week for 50 weeks.
     <button type="submit">Join</button>
   </p>
 </form>
-
+<hr/>
 <p>
   <span style="font-size: 14px;">#11: 16 June 2021 </span><br/><a href="writing/modena"><b>"It Comes From Modena"</b></a><br/>
 
-  <i>"Born near the ocean with no mountains in sight. I believe I can see clear across the world.</i>
+  <i>Born near the ocean with no mountains in sight. I believe I can see clear across the world.</i>
 </p>
 
 
 <p>
   <span style="font-size: 14px;">#10: 09 June 2021 </span><br/><a href="writing/a-different-knob"><b>"A Different Knob"</b></a><br/>
 
-  <i>"It's part of your job to speak to people up close," he says, dropping a tin of mints on my desk. It strikes, and a pleasantly resonant rattling sound rings out. It takes its time to get to silence. I look up and smile.</i>
+  <i>It's part of your job to speak to people up close," he says, dropping a tin of mints on my desk. It strikes, and a pleasantly resonant rattling sound rings out. It takes its time to get to silence. I look up and smile.</i>
 </p>
 
 <p>
