--- a/cw.html
+++ b/cw.html
@@ -20,6 +20,14 @@ title: Creative Writing
   </p>
 </form>
 <hr/>
+
+<p>
+  <span style="font-size: 14px;">#12: 24 June 2021 </span><br/><a href="writing/outside-lagunitas"><b>"Outside Lagunitas Grocery"</b></a><br/>
+
+  <i>"Be Prepared" by Vera Brosgol is a graphic novel that tells the story of her experiences at a Russian sleepaway camp in the wilderness of Connecticut.</i>
+</p>
+
+
 <p>
   <span style="font-size: 14px;">#11: 16 June 2021 </span><br/><a href="writing/modena"><b>"It Comes From Modena"</b></a><br/>
 
