--- a/cw.html
+++ b/cw.html
@@ -22,6 +22,12 @@ title: Creative Writing
 <hr/>
 
 <p>
+  <span style="font-size: 14px;">#12: 31 June 2021 </span><br/><a href="writing/grilling-lessons"><b>"Grilling Lessons"</b></a><br/>
+
+  <i>I'm at the pool fumbling with an umbrella. My permanent lack of comfort here has me permanently sunglassed and I smell like classic Dude Stew, body odor, suntan lotion and vape fumes.</i>
+</p>
+
+<p>
   <span style="font-size: 14px;">#12: 24 June 2021 </span><br/><a href="writing/outside-lagunitas"><b>"Outside Lagunitas Grocery"</b></a><br/>
 
   <i>"Be Prepared" by Vera Brosgol is a graphic novel that tells the story of her experiences at a Russian sleepaway camp in the wilderness of Connecticut.</i>
