--- a/writing/modena.html
+++ b/writing/modena.html
@@ -35,7 +35,7 @@ title: It Comes From Modena
 <p></p>
 <p>* * *</p>
 <p></p>
-<p>Another 4:30AM wakeup with a terrible stomach ache. I get high and turn on Netflix — a competitive cooking show where the objective is to turn leftovers into other dishes. Food alchemy. The hostess is a woman I grew up with, she lived across the street from my best friend Matt. I assumed she would want to get in touch with me on social media — who wouldn’t? — to recapture our youth. No luck yet.</p>
+<p>Another 4:30AM wakeup with a terrible stomach ache. I get high and turn on Netflix — a competitive cooking show where the objective is to turn leftovers into other dishes. Food alchemy. The hostess is a woman I grew up with. I assumed she would want to get in touch with me on social media — who wouldn’t? — to recapture our youth. No luck yet.</p>
 <p></p>
 <p>* * *</p>
 <p></p>
